--- a/src/app/faq/faq.component.css
+++ b/src/app/faq/faq.component.css
@@ -395,6 +395,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 p{
     font-size: 16px;
+    text-align: start;
 }
 @media (max-width:768px){
   .faq_sec_pages {
