--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -119,7 +119,7 @@
               </div>
             </li>
             <li routerLink="/our-theme" >
-              <a class="act" >Our Theme</a>
+              <a class="act casino" >Our Theme</a>
              </li>
             <li><a class="act" routerLink="/FAQ">FAQ</a></li>
             <li><a class="act" routerLink="/contact">Contact Us</a></li>
