--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,88 +1,81 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
-
-*{
-    margin: 0px;
-    padding:  0px;
+* {
+  margin: 0px;
+  padding: 0px;
 }
-.nav_row{
-    display: flex;
-    justify-content: space-around;
-    padding-top: 27px;
-
+.nav_row {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 27px;
 }
 .nav_row_2 {
-    display: flex;
+  display: flex;
 }
 
-nav{
-    height: 96px;
-    background-color: #FFF;
-    color: #000;
-    font-size: 18px;
+nav {
+  height: 96px;
+  background-color: #fff;
+  color: #000;
+  font-size: 18px;
 }
-.nav_row_2  a{
-    text-decoration: none;
-    list-style: none;
-    margin: 15px;
-    position: relative;
-    color: #000;
-    list-style: none;
-    margin-top: 1px
+.nav_row_2 a {
+  text-decoration: none;
+  list-style: none;
+  margin: 15px;
+  position: relative;
+  color: #000;
+  list-style: none;
+  margin-top: 1px;
 }
-.nav_row_2 li{
-    list-style: none;
-   
+.nav_row_2 li {
+  list-style: none;
 }
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
-.nav_row_2 li a{
-color: #000;
-/* padding: 18px; */
-padding-bottom: 21px !important;
-/* padding-left: 14px; */
-font-family: 'Poppins';
-font-size: 16px;
-cursor: pointer;
+.nav_row_2 li a {
+  color: #000;
+  /* padding: 18px; */
+  padding-bottom: 21px !important;
+  /* padding-left: 14px; */
+  font-family: "Poppins";
+  font-size: 16px;
+  cursor: pointer;
 }
-.active,.nav_row_2 li:hover{
-/* background-color: aqua; */
+.active,
+.nav_row_2 li:hover {
+  /* background-color: aqua; */
 }
 
-.nav_row_2 li:hover .sub_menu{
+.nav_row_2 li:hover .sub_menu {
   display: block;
   position: absolute;
   margin-top: 15px;
   background-color: #a0c528;
   width: 250px;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
-
-
 }
 .sub_menu li a {
   color: white;
   margin-left: 18px !important;
-  font-size: 14px; 
-  font-family: 'Poppins';
- 
-
+  font-size: 14px;
+  font-family: "Poppins";
 }
-.nav_row_2 li:hover .sub_menu ul{
+.nav_row_2 li:hover .sub_menu ul {
   display: block;
   margin: 10px;
 }
-.nav_row_2 li:hover .sub_menu ul li{
+.nav_row_2 li:hover .sub_menu ul li {
   padding: 8px;
 }
-.sub_menu ul li{
+.sub_menu ul li {
   color: white;
   font-size: 15px;
   margin-left: -5px;
-
 }
 
-.nav_row_2   a:after  {
+.nav_row_2 a:after {
   content: "";
   background-color: #a0c528;
   height: 3px;
@@ -91,19 +84,17 @@ cursor: pointer;
   left: 3px;
   bottom: 9px;
   transition: 0.3s;
-
 }
-.nav_row_2  a:hover:after{
+.nav_row_2 a:hover:after {
   width: 100%;
   color: #a0c528;
-} 
-
-  .act:hover{
-  color: #a0c528;
-
 }
-.sub_menu  li a::before{
-  content: '';
+
+.act:hover {
+  color: #a0c528;
+}
+.sub_menu li a::before {
+  content: "";
   background-color: #fff;
   position: absolute;
   top: 8px;
@@ -113,21 +104,21 @@ cursor: pointer;
   opacity: 0;
 }
 
-.sub_menu  li a:hover::before{
-  transition: all .2s ease;
+.sub_menu li a:hover::before {
+  transition: all 0.2s ease;
   left: 10px;
   opacity: 1;
 }
-.sub_menu  li a:hover{
+.sub_menu li a:hover {
   position: relative;
   padding-left: 23px !important;
-  -webkit-transition: all .2s ease;
-  -moz-transition: all .2s ease;
-  transition: all .2s ease;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  transition: all 0.2s ease;
 }
 
-.sub_menu  .list::before{
-  content: '';
+.sub_menu .list::before {
+  content: "";
   background-color: #fff;
   position: absolute;
   top: 16px;
@@ -137,66 +128,62 @@ cursor: pointer;
   opacity: 0;
 }
 
-.sub_menu  .list:hover::before{
-  transition: all .2s ease;
+.sub_menu .list:hover::before {
+  transition: all 0.2s ease;
   left: 10px;
   opacity: 1;
 }
-.sub_menu  .list:hover{
+.sub_menu .list:hover {
   position: relative;
   padding-left: 30px !important;
-  -webkit-transition: all .2s ease;
-  -moz-transition: all .2s ease;
-  transition: all .2s ease;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  transition: all 0.2s ease;
 }
 
- .sub_menu_2{
-display: none;
+.sub_menu_2 {
+  display: none;
 }
-.hover_me:hover .sub_menu_2{
+.hover_me:hover .sub_menu_2 {
   display: block;
   position: absolute;
   /* margin-left: 22px; */
   left: 95%;
-    top: 0;
-    background: #a0c528;
-    width: 250px;
-
+  top: 0;
+  background: #a0c528;
+  width: 250px;
 }
-.sub_menu_3{
+.sub_menu_3 {
   display: none;
-  } 
-  .hover_me:hover .sub_menu_3{
-    display: block;
-    position: absolute;
-    left: 95%;
-      top: 23%;
-      background: #a0c528;
-      width: 250px;
+}
+.hover_me:hover .sub_menu_3 {
+  display: block;
+  position: absolute;
+  left: 95%;
+  top: 23%;
+  background: #a0c528;
+  width: 250px;
+}
 
-  }
+.sub_menu_4 {
+  display: none;
+}
+.hover_me:hover .sub_menu_4 {
+  display: block;
+  position: absolute;
+  left: 95%;
+  top: 44%;
+  background: #a0c528;
+  width: 250px;
+}
+header {
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: position 10s;
+  -ms-transition: position 10s;
+  -o-transition: position 10s;
+  transition: all 0.5s ease;
+}
 
-  .sub_menu_4{
-    display: none;
-    } 
-    .hover_me:hover .sub_menu_4{
-      display: block;
-      position: absolute;
-      left: 95%;
-        top: 44%;
-        background: #a0c528;
-        width: 250px;
-
-    }
-    header {
-      
-      -webkit-transition: all 0.5s ease;
-      -moz-transition: position 10s;
-      -ms-transition: position 10s;
-      -o-transition: position 10s;
-      transition: all 0.5s ease;
-    }
-    
 /* .fixed {
   position: fixed;
   top: 0;
@@ -205,12 +192,12 @@ display: none;
   width: 100%;
 } */
 @keyframes smoothScroll {
-	0% {
-		transform: translateY(-40px);
-	}
-	100% {
-		transform: translateY(0px);
-	}
+  0% {
+    transform: translateY(-40px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
 }
 
 .page-header {
@@ -225,81 +212,83 @@ display: none;
   position: fixed;
   animation: smoothScroll 1s forwards;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
-z-index: 9999;
+  z-index: 9999;
 }
 
-
-
-.sub_menu{
+.sub_menu {
   display: none;
 }
 
-.nav_col{
-    width: 13%;
+.nav_col {
+  width: 13%;
 }
-.nav_col_2{
-    width: 63%;
+.nav_col_2 {
+  width: 63%;
 }
-.nav_col_3{
+.nav_col_3 {
   width: 13% !important;
 }
-.nav_col_3 i{
+.nav_col_3 i {
   margin: 4px;
 }
-.nav_col_3 .fa-brands:hover{
-color: #a0c528;
-cursor: pointer;
+.nav_col_3 .fa-brands:hover {
+  color: #a0c528;
+  cursor: pointer;
 }
-.responsive{
-    display: none;
-    }
-    /* .normal_view{
+.responsive {
+  display: none;
+}
+/* .normal_view{
       display: block;
       } */
-      .navigation{
-    background-color: #a0c528 !important;
-      }
-    
-    
-      .accordion-flush .accordion-item .accordion-button, .accordion-flush .accordion-item .accordion-button.collapsed {
-        border-radius: 0;
-        background-color: #a0c528 !important;
-        color: white;
-        padding: 22px;
-        font-size: 13px;
-        font-family: Poppins;
-    }
-    .accordion-body {
-      padding: var(--bs-accordion-body-padding-y) var(--bs-accordion-body-padding-x);
-      background-color: #a0c528;
-      color: white;
-      font-size: 13px;
-      font-family: Poppins;
-      padding-left: 25px;
+.navigation {
+  background-color: #a0c528 !important;
+}
 
-    }
-    
-    .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-      /* --bs-gutter-x: 2.5rem !important;
+.accordion-flush .accordion-item .accordion-button,
+.accordion-flush .accordion-item .accordion-button.collapsed {
+  border-radius: 0;
+  background-color: #a0c528 !important;
+  color: white;
+  padding: 22px;
+  font-size: 13px;
+  font-family: Poppins;
+}
+.accordion-body {
+  padding: var(--bs-accordion-body-padding-y) var(--bs-accordion-body-padding-x);
+  background-color: #a0c528;
+  color: white;
+  font-size: 13px;
+  font-family: Poppins;
+  padding-left: 25px;
+}
+
+.container,
+.container-fluid,
+.container-lg,
+.container-md,
+.container-sm,
+.container-xl,
+.container-xxl {
+  /* --bs-gutter-x: 2.5rem !important;
       --bs-gutter-y: 0;
       width: 100%;
       padding-right: calc(var(--bs-gutter-x) * .5);
       padding-left: calc(var(--bs-gutter-x) * .5);
       margin-right: auto;
       margin-left: auto; */
-      padding: 0;
-    }
-    /* .nav_col img{
+  padding: 0;
+}
+/* .nav_col img{
       margin: 30px 0 !important;
     } */
-    .navbar-collapse {
-      flex-basis: 100%;
-      flex-grow: 1;
-      align-items: center;
-     
-    }
-    
-    /* .accordion {
+.navbar-collapse {
+  flex-basis: 100%;
+  flex-grow: 1;
+  align-items: center;
+}
+
+/* .accordion {
       --bs-accordion-color: #212529;
       --bs-accordion-bg: #fff;
       --bs-accordion-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out,border-radius 0.15s ease;
@@ -323,143 +312,150 @@ cursor: pointer;
       --bs-accordion-active-color: white;
       --bs-accordion-active-bg: #e7f1ff;
     } */
-    .accordion-button:focus {
-      z-index: 3;
-      border-color: var(--bs-accordion-btn-focus-border-color);
-      outline: 0;
-      box-shadow: var(--bs-accordion-btn-focus-box-shadow) none !important;
-    }
-    .accordion-button1::after {
-      flex-shrink: 0;
-      width: var(--bs-accordion-btn-icon-width);
-      height: var(--bs-accordion-btn-icon-width);
-      margin-left: auto;
-      content: "";
-      background-image: var(--bs-accordion-btn-icon);
-      background-repeat: no-repeat;
-      background-size: var(--bs-accordion-btn-icon-width);
-      transition: var(--bs-accordion-btn-icon-transition);
-    }
-    .accord_btn{
-      background: #a0c528;
-      padding: 8px;
-      font-size:  13px;
-      width: 100%;
-      text-align: start;
-      border: none;
-      color: white;
-      padding-left: 20px;
-      height: 42px;
-
-    }
-    @media (max-width:820px){
-    
-      .normal_view{
-        display: none !important;
-      }
-    
-      .responsive{
-        display: block;
-        }
-    nav{
-      border-bottom: 1px solid rgba(0,0,0, 0.1);
-      background: none !important;
-    }
-    .nav_col img{
-      /* margin: 30px -310px !important; */
-      max-width: 17%;
-    margin-left: -121px;
-    }
-    .navbar-toggler-icon {
-     
-      margin-right: 44px !important;
+.accordion-button:focus {
+  z-index: 3;
+  border-color: var(--bs-accordion-btn-focus-border-color);
+  outline: 0;
+  box-shadow: var(--bs-accordion-btn-focus-box-shadow) none !important;
+}
+.accordion-button1::after {
+  flex-shrink: 0;
+  width: var(--bs-accordion-btn-icon-width);
+  height: var(--bs-accordion-btn-icon-width);
+  margin-left: auto;
+  content: "";
+  background-image: var(--bs-accordion-btn-icon);
+  background-repeat: no-repeat;
+  background-size: var(--bs-accordion-btn-icon-width);
+  transition: var(--bs-accordion-btn-icon-transition);
+}
+.accord_btn {
+  background: #a0c528;
+  padding: 8px;
+  font-size: 13px;
+  width: 100%;
+  text-align: start;
+  border: none;
+  color: white;
+  padding-left: 20px;
+  height: 42px;
+}
+@media (max-width: 820px) {
+  .normal_view {
+    display: none !important;
   }
 
-  .nav_col{
+  .responsive {
+    display: block;
+  }
+  nav {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    background: none !important;
+  }
+  .nav_col img {
+    /* margin: 30px -310px !important; */
+    max-width: 17%;
+    margin-left: -121px;
+  }
+  .navbar-toggler-icon {
+    margin-right: 44px !important;
+  }
+
+  .nav_col {
     width: 59%;
     margin: 25px 0 !important;
-
   }
-
-    }
-    .accordion-body a {
-        color: white;
-     
-    }
-    .accord_btn a{
-        color: white;
-        font-size: 13px;
-        font-family: Poppins;
-    }
-    .act:hover{
-      color: #A0C528 !important;
-    }
-
-    .nav_row_2 .current_page_item a :after {
-      content: "";
-      background-color: #a0c528;
-      height: 3px;
-      width: 0;
-      position: absolute;
-      left: 3px;
-      bottom: 9px;
-      transition: 0.3s;
-  }
-
-  .nav_row_2 .current_page_item a:hover:after {
-    width: 100%;
-    color: #a0c528;
 }
-.menubar{
+.accordion-body a {
+  color: white;
+}
+.accord_btn a {
+  color: white;
+  font-size: 13px;
+  font-family: Poppins;
+}
+.act:hover {
+  color: #a0c528 !important;
+}
+
+.nav_row_2 .current_page_item a :after {
+  content: "";
+  background-color: #a0c528;
+  height: 3px;
+  width: 0;
+  position: absolute;
+  left: 3px;
+  bottom: 9px;
+  transition: 0.3s;
+}
+
+.nav_row_2 .current_page_item a:hover:after {
+  width: 100%;
+  color: #a0c528;
+}
+.menubar {
   border: none !important;
 }
-.navbar-toggler{
+.navbar-toggler {
   border: none;
 }
-.navbar-toggler:hover{
+.navbar-toggler:hover {
   background: none;
   border: none;
 }
 
-@media(max-width: 800px){
-
-
+@media (max-width: 800px) {
   .navbar-toggler-icon {
     /* margin-right: -137px !important; */
     font-size: 16px;
-}
+  }
 
-.nav_col img {
-  /* margin: 30px -28px !important; */
-  max-width: 19%;
+  .nav_col img {
+    /* margin: 30px -28px !important; */
+    max-width: 19%;
     margin-left: -122px;
-}
+  }
 }
 
-.vrnl_logo{
+.vrnl_logo {
   width: 134px;
   height: 53px;
 }
 
-
-@media(min-width: 1200px){
-
-.nav_col img {
-  /* margin: 30px -28px !important; */
-  max-width: 100%;
-  margin-left: -13px;
-}
+@media (min-width: 1200px) {
+  .nav_col img {
+    /* margin: 30px -28px !important; */
+    max-width: 100%;
+    margin-left: -13px;
+  }
 }
 
-@media screen and (max-width:767px) {
-  
-.nav_col img {
-  /* margin: 30px -28px !important; */
-  max-width: 50%;
-  margin-left: -13px;
-}
+@media screen and (max-width: 767px) {
+  .nav_col img {
+    /* margin: 30px -28px !important; */
+    max-width: 50%;
+    margin-left: -13px;
+  }
 }
 
-.navbar-toggler:focus{
+.navbar-toggler:focus {
   box-shadow: none;
+}
+
+.casino {
+  animation: color-text-keyframes 1.2s linear infinite;
+}
+@keyframes color-text-keyframes {
+  0% {
+    color: red;
+  }
+  33.3% {
+    color: #ecba00;
+  }
+  66.6% {
+    color: #ff7d00;
+  }
+  to {
+    color: #9b0a16;
+  }
 }
