--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -70,6 +70,26 @@
                 </ul>
               </div>
             </li>
+
+            <li>
+              <a class="act" href="#">RM</a>
+              <div class="sub_menu">
+                <ul>
+                  <li>
+                    <a routerLink="/risk-management">risk management</a>
+                  </li>
+                  <li>
+                    <a routerLink="/betting-trade-master">Betting Trade Master</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+
+
+
+
+
+
             <li>
               <a class="act" href="#">White Label</a>
               <div class="sub_menu">
