--- a/src/styles.css
+++ b/src/styles.css
@@ -241,10 +241,10 @@ font-weight: 600;
     width: 98%;
     font-size: 16px;
 }
-
+/* 
 .platform_img{
     display: none;
-}
+} */
 .you_img{
     display: none;
 }
@@ -671,9 +671,7 @@ font-weight: 600;
         display: flex;
       flex-direction: column;
     }
-    .integration_col {
-        display: none;
-    }
+    
     .integration_col_1 {
         width: 97%;
         margin-left: 12px;
