--- a/src/styles.css
+++ b/src/styles.css
@@ -7217,7 +7217,7 @@ cursor: pointer;
     text-decoration: none;
     width: 100%;
     text-align: center;
-    font-size: larger;
+    font-size: 19px;
 
 
 
