--- a/src/app/esport/esport.component.html
+++ b/src/app/esport/esport.component.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="esports-betting-col2">
-<img class="esport_img" src="assets/sirplay image 2.webp" alt="eSports Betting">
+<img class="esport_img" src="assets/vrnl image 2.webp" alt="eSports Betting">
         </div>
     </div>
 </section>
