--- a/src/app/i-frame/i-frame.component.html
+++ b/src/app/i-frame/i-frame.component.html
@@ -17,7 +17,7 @@
       <div class="sports_if_col_2">
         <img
           class="iframe_images"
-          src="assets/sirplay vrnl 12.webp"
+          src="assets/vrnl 12.webp"
           alt="Sportsbook iFrame"
         />
       </div>
@@ -55,7 +55,7 @@
 
         <img
         class="types_images"
-        src="assets/sirplay image 4 (1).webp"
+        src="assets/vrnl image 4 (1).webp"
         alt="Types of sportsbook iframe"
       />
       </div>
