--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -83,7 +83,7 @@
       <div class="whites_col_1">
         <img
           class="whites_sec_img2"
-          src="assets/Sirplay image 6.webp"
+          src="assets/vrnl image 6.webp"
           width="543"
           height="317"
           alt="White Label Solutions"
@@ -97,7 +97,7 @@
       <div class="gaming_col">
         <img
           class="gaming_img"
-          src="assets/sirplay igaming.webp"
+          src="assets/vrnl igaming.webp"
           width="520"
           height="325"
           alt="iGaming Platform"
@@ -154,7 +154,7 @@
       <div class="casino_col_2">
         <img
           class="casino_sec_img2"
-          src="assets/sirplay online c.webp"
+          src="assets/vrnl online c.webp"
           width="840"
           height="700"
           alt="Online Casino"
@@ -171,7 +171,7 @@
           Play at the live casino as if you were directly inside the casino
         </h1>
         <img
-          src="assets/sirplay vrnl 19.webp"
+          src="assets/vrnl 19.webp"
           width="790"
           height="372"
           alt="live casino"
@@ -205,7 +205,7 @@
     <div class="integration_row">
       <div class="integration_col">
         <img
-          src="assets/sirplay vrnl 12.webp"
+          src="assets/vrnl 12.webp"
           title="integration_platforms"
           width="545"
           height="315"
