--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -60,7 +60,7 @@
       </div>
 
       <div class="container2-col2">
-        <img class="container_imgs" src="assets/sirplay vrnl 26_data.webp" alt="Live Casino providers" />
+        <img class="container_imgs" src="assets/vrnl 26_data.webp" alt="Live Casino providers" />
       </div>
     </div>
   </section>
@@ -149,7 +149,7 @@
           "></div>
       </div>
       <div class="container5-col1">
-        <img class="integration_images" src="assets/sirplay vrnl 12.webp" alt="integrated through iFrame or
+        <img class="integration_images" src="assets/vrnl 12.webp" alt="integrated through iFrame or
         APIs"/>
       </div>
     </div>
