--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -121,7 +121,7 @@
       
           <div class="crypto-section5-right">
           <h2>Play at the live casino as if you were directly inside the casino</h2>
-          <img class="live_sec5_imgs" src="assets/sirplay vrnl 19.webp" alt="Live Casino">
+          <img class="live_sec5_imgs" src="assets/vrnl 19.webp" alt="Live Casino">
           </div>
         </div>
       
@@ -132,7 +132,7 @@
         <div class="web3_page_row">
           <div class="web_page_col">
       <h1 class="web_3_header">Top online casino providers at World Class</h1>
-      <img class="web_3_imag" src="assets/sirplay online c.webp" alt="Online Casino">
+      <img class="web_3_imag" src="assets/vrnl online c.webp" alt="Online Casino">
           </div>
           <div class="web_page_col_1">
            <h1 class="web3_header_2"> Online Casino</h1> 
