--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -56,7 +56,7 @@
     <div class="sportsbetting-mainfeature-col1">
       <img
         class="sport_images_1"
-        src="assets/sirplay image 4 (1).webp"
+        src="assets/vrnl image 4 (1).webp"
         alt="Sports Betting software"
       />
     </div>
@@ -142,7 +142,7 @@
     <div class="sportsbetting-benefits-image">
       <img
         class="images_benefit_1"
-        src="assets/Sirplay image 5.webp"
+        src="assets/vrnl image 5.webp"
         alt="complete Sports betting software"
       />
     </div>
@@ -171,7 +171,7 @@
 
     <div class="sportsbetting-complete-sports-col2">
       <img
-        src="assets/sirplay vrnl 22.webp"
+        src="assets/vrnl 22.webp"
         width="353"
         height="650"
         class="web3_img"
@@ -249,7 +249,7 @@
       </p>
     </div>
     <div class="sportsbetting-betting-software-col2">
-      <img class="addverties_img" src="assets/sirplay online c.webp" alt="Betting software" />
+      <img class="addverties_img" src="assets/vrnl online c.webp" alt="Betting software" />
     </div>
   </div>
 </section>
