--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -29,7 +29,7 @@
     <section class="whites_label_sec">
         <div class="whites_c_row whites_label">
             <div class="white_f_col">
-    <img class="tv_image" src="assets/sirplay crypto tv.webp" alt="White label casino">
+    <img class="tv_image" src="assets/vrnl crypto tv.webp" alt="White label casino">
             </div>
             <div class="white_f_col_1">
     
@@ -99,7 +99,7 @@
         <div class="white_csol_col_1">
       <img
           class="casino_sec_img2"
-          src="assets/sirplay online c.webp"
+          src="assets/vrnl online c.webp"
          alt=" Casino White Label"
         />
         </div>
@@ -110,7 +110,7 @@
     <section class="white_sol_sec">
     <div class="white_labe_live_row">
         <div class="white_labe_live_col">
-            <img class="white_images_sec_sol" src="assets/sirplay vrnl 26_data.webp" alt="Live Casino providers">
+            <img class="white_images_sec_sol" src="assets/vrnl 26_data.webp" alt="Live Casino providers">
               
         </div>
         <div class="white_labe_live_col_1">
