--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -16,7 +16,6 @@
         <p>
           Vrnl’s <b  class="bold"> white label sportsbook solution</b> is a fully managed
            sportsbook. 
-
           <br />
           </p>
           <p>
@@ -35,7 +34,7 @@
       <div class="label-img">
         <img
           class="white_label_imgs"
-          src="assets/sirplay vrnl 27_11zon.webp"
+          src="assets/vrnl 27_11zon.webp"
           alt="white label sportsbook"
         />
       </div>
