--- a/src/app/betting-trade-master/betting-trade-master.component.html
+++ b/src/app/betting-trade-master/betting-trade-master.component.html
@@ -112,7 +112,7 @@
       <div class="casino_col_2">
         <img
           class="casino_sec_img2"
-          src="assets/sirplay online c.webp"
+          src="assets/vrnl online c.webp"
           width="840"
           height="700"
           alt="Online Casino"
