--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -146,11 +146,19 @@
           </div>
         </div>
         <div class="nav_col_3">
-          <a target="_blank" href="https://www.facebook.com/profile.php?id=100092326342619&mibextid=LQQJ4d"
+          <a target="_blank" href="https://www.facebook.com/people/Jack-Harris/pfbid02zB4x4iS12KXrQbTqepGxwWwtG1buPgyyzc5Ppiqh3vc2mL9woipxQFsZh319pvjNl/"
           style="color: black;" aria-label="Visit Facebook Profile">
           <i class="fa-brands fa-facebook-f"></i>
        </a>
-          <a target="_blank" href="https://t.me/Johnmark1974" style="color: black;" aria-label="Visit Twitter Profile"><i
+          <a target="_blank" href="https://t.me/Johnmark1974
+
+
+
+          " style="color: black;" aria-label="Visit telegram Profile"><i
+              class="fa-brands fa-telegram"></i></a>
+
+              <a target="_blank" href="https://twitter.com/VRNLOFFICIAL
+          " style="color: black;" aria-label="Visit Twitter Profile"><i
               class="fa-brands fa-twitter"></i></a>
           <a target="_blank"
             href="https://api.whatsapp.com/send/?phone=%2B918268808222&text&type=phone_number&app_absent=0"
@@ -159,6 +167,7 @@
               class="fa-brands fa-skype"></i></a>
           <a target="_blank" href="https://www.instagram.com/vrnl_exchange" style="color: black;" aria-label="Visit instagram Profile"> <i
               class="fa-brands fa-instagram"></i></a>
+             
 
         </div>
       </div>
