--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 	<div class="side-slider-content">
 		<ul id="side-cs-cont" class="contact-service-list">
 			<li id="cs-145" class="icon-fb">
-				<a target="_blank" href="https://www.facebook.com/profile.php?id=100092326342619&mibextid=LQQJ4d">
+				<a target="_blank" href="https://www.facebook.com/people/Jack-Harris/pfbid02zB4x4iS12KXrQbTqepGxwWwtG1buPgyyzc5Ppiqh3vc2mL9woipxQFsZh319pvjNl/">
 					<img src="assets\icons8-facebook.gif"alt="Facebook">
 					<span ui-key="displayText">Facebook</span>
 				</a><hr>
@@ -21,6 +21,11 @@
 				<a target="_blank" href="https://t.me/Johnmark1974">
 					<img src="assets\icons8-telegram.gif" ui-key="realIconPath"alt="Telegram">
 					<span ui-key="displayText">Telegram</span></a><hr>
+			</li>
+			<li id="cs-81" class="icon-mail">
+				<a target="_blank" href="https://twitter.com/VRNLOFFICIAL">
+					<img src="assets/icons8-twitter-circled.gif" ui-key="realIconPath"alt="Telegram">
+					<span ui-key="displayText">Twitter</span></a><hr>
 			</li>
 			<li id="cs-81" class="icon-mail">
 				<a target="_blank" href="skype:live:9960f32f776599a2?chat">
