--- a/src/app/betting-trade-master/betting-trade-master.component.css
+++ b/src/app/betting-trade-master/betting-trade-master.component.css
@@ -413,7 +413,7 @@ gap:20px;
     color: gray;
 }
 .casino_col{
-    width: 20%;
+    width: 20% !important;
 }
 .casino_list{
     font-size: 16px;
