--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -165,7 +165,7 @@
             style="color: black;" aria-label="Visit whatsapp Profile"><i class="fa-brands fa-whatsapp"></i></a>
           <a target="_blank" href="skype:live:9960f32f776599a2?chat" style="color: black;" aria-label="Visit skype Profile"> <i
               class="fa-brands fa-skype"></i></a>
-          <a target="_blank" href="https://www.instagram.com/vrnl_exchange" style="color: black;" aria-label="Visit instagram Profile"> <i
+          <a target="_blank" href="https://www.instagram.com/vrnl_official/?igshid=NzZhOTFlYzFmZQ%3D%3D" style="color: black;" aria-label="Visit instagram Profile"> <i
               class="fa-brands fa-instagram"></i></a>
              
 
