--- a/src/app/our-theme/our-theme.component.html
+++ b/src/app/our-theme/our-theme.component.html
@@ -68,14 +68,14 @@
             </div>
             <div class="card-content">
                 <h2>
-                  Username : <span id="vrnldemo">vrnldemo</span>
-                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo')" [style.display]="copyed === 'vrnldemo' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo'"></i>
+                  Username : <span id="vrnldemo1">vrnldemo</span>
+                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo1')" [style.display]="copyed === 'vrnldemo1' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo1'"></i>
                 </h2>
                 <h2>
-                  Password : <span id="password">Asdf1234</span>
-                  <i class="fas fa-copy" (click)="copytoclip('password')" [style.display]="copyed === 'password' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password'"></i>
+                  Password : <span id="password1">Asdf1234</span>
+                  <i class="fas fa-copy" (click)="copytoclip('password1')" [style.display]="copyed === 'password1' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password1'"></i>
                 </h2>
               </div>
 
@@ -88,14 +88,14 @@
             </div>
             <div class="card-content">
                 <h2>
-                  Username : <span id="vrnldemo">vrnldemo</span>
-                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo')" [style.display]="copyed === 'vrnldemo' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo'"></i>
+                  Username : <span id="vrnldemo2">vrnldemo</span>
+                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo2')" [style.display]="copyed === 'vrnldemo2' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo2'"></i>
                 </h2>
                 <h2>
-                  Password : <span id="password">Asdf1234</span>
-                  <i class="fas fa-copy" (click)="copytoclip('password')" [style.display]="copyed === 'password' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password'"></i>
+                  Password : <span id="password2">Asdf1234</span>
+                  <i class="fas fa-copy" (click)="copytoclip('password2')" [style.display]="copyed === 'password2' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password2'"></i>
                 </h2>
               </div>
 
@@ -109,14 +109,14 @@
             </div>
             <div class="card-content">
                 <h2>
-                  Username : <span id="vrnldemo">vrnldemo</span>
-                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo')" [style.display]="copyed === 'vrnldemo' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo'"></i>
+                  Username : <span id="vrnldemo3">vrnldemo</span>
+                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo3')" [style.display]="copyed === 'vrnldemo3' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo3'"></i>
                 </h2>
                 <h2>
-                  Password : <span id="password">Asdf1234</span>
-                  <i class="fas fa-copy" (click)="copytoclip('password')" [style.display]="copyed === 'password' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password'"></i>
+                  Password : <span id="password3">Asdf1234</span>
+                  <i class="fas fa-copy" (click)="copytoclip('password3')" [style.display]="copyed === 'password3' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password3'"></i>
                 </h2>
               </div>
 
@@ -129,14 +129,14 @@
             </div>
             <div class="card-content">
                 <h2>
-                  Username : <span id="vrnldemo">vrnldemo</span>
-                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo')" [style.display]="copyed === 'vrnldemo' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo'"></i>
+                  Username : <span id="vrnldemo4">vrnldemo</span>
+                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo4')" [style.display]="copyed === 'vrnldemo4' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo4'"></i>
                 </h2>
                 <h2>
-                  Password : <span id="password">Asdf1234</span>
-                  <i class="fas fa-copy" (click)="copytoclip('password')" [style.display]="copyed === 'password' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password'"></i>
+                  Password : <span id="password4">Asdf1234</span>
+                  <i class="fas fa-copy" (click)="copytoclip('password4')" [style.display]="copyed === 'password4' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password4'"></i>
                 </h2>
               </div>
 
@@ -150,14 +150,14 @@
             </div>
             <div class="card-content">
                 <h2>
-                  Username : <span id="vrnldemo">vrnldemo</span>
-                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo')" [style.display]="copyed === 'vrnldemo' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo'"></i>
+                  Username : <span id="vrnldemo5">vrnldemo</span>
+                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo5')" [style.display]="copyed === 'vrnldemo5' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo5'"></i>
                 </h2>
                 <h2>
-                  Password : <span id="password">Asdf1234</span>
-                  <i class="fas fa-copy" (click)="copytoclip('password')" [style.display]="copyed === 'password' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password'"></i>
+                  Password : <span id="password5">Asdf1234</span>
+                  <i class="fas fa-copy" (click)="copytoclip('password5')" [style.display]="copyed === 'password5' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password5'"></i>
                 </h2>
               </div>
 
@@ -169,14 +169,14 @@
             </div>
             <div class="card-content">
                 <h2>
-                  Username : <span id="vrnldemo">vrnldemo</span>
-                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo')" [style.display]="copyed === 'vrnldemo' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo'"></i>
+                  Username : <span id="vrnldemo6">vrnldemo</span>
+                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo6')" [style.display]="copyed === 'vrnldemo6' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo6'"></i>
                 </h2>
                 <h2>
-                  Password : <span id="password">Asdf1234</span>
-                  <i class="fas fa-copy" (click)="copytoclip('password')" [style.display]="copyed === 'password' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password'"></i>
+                  Password : <span id="password6">Asdf1234</span>
+                  <i class="fas fa-copy" (click)="copytoclip('password6')" [style.display]="copyed === 'password6' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password6'"></i>
                 </h2>
               </div>
 
@@ -189,14 +189,14 @@
             </div>
             <div class="card-content">
                 <h2>
-                  Username : <span id="vrnldemo">vrnldemo</span>
-                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo')" [style.display]="copyed === 'vrnldemo' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo'"></i>
+                  Username : <span id="vrnldemo7">vrnldemo</span>
+                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo7')" [style.display]="copyed === 'vrnldemo7' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo7'"></i>
                 </h2>
                 <h2>
-                  Password : <span id="password">Asdf1234</span>
-                  <i class="fas fa-copy" (click)="copytoclip('password')" [style.display]="copyed === 'password' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password'"></i>
+                  Password : <span id="password7">Asdf1234</span>
+                  <i class="fas fa-copy" (click)="copytoclip('password7')" [style.display]="copyed === 'password7' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password7'"></i>
                 </h2>
               </div>
    
@@ -208,56 +208,59 @@
             </div>
             <div class="card-content">
                 <h2>
-                  Username : <span id="vrnldemo">vrnldemo</span>
-                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo')" [style.display]="copyed === 'vrnldemo' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo'"></i>
+                  Username : <span id="vrnldemo8">vrnldemo</span>
+                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo8')" [style.display]="copyed === 'vrnldemo8' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo8'"></i>
                 </h2>
                 <h2>
-                  Password : <span id="password">Asdf1234</span>
-                  <i class="fas fa-copy" (click)="copytoclip('password')" [style.display]="copyed === 'password' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password'"></i>
+                  Password : <span id="password8">Asdf1234</span>
+                  <i class="fas fa-copy" (click)="copytoclip('password8')" [style.display]="copyed === 'password8' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password8'"></i>
                 </h2>
               </div>
 
     </div>
     <div class="card">
-        <div class="flip-box-front"><a href="https://world777.vrnlexch.com/"target="_blank">
-            <img class="lb_partner_logo logo9" src="assets/world7777.webp" alt="world7777" ></a>
-            <h4 class="logoname">World777</h4>
-            </div>
-            <div class="card-content">
-                <h2>
-                  Username : <span id="vrnldemo">vrnldemo</span>
-                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo')" [style.display]="copyed === 'vrnldemo' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo'"></i>
-                </h2>
-                <h2>
-                  Password : <span id="password">Asdf1234</span>
-                  <i class="fas fa-copy" (click)="copytoclip('password')" [style.display]="copyed === 'password' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password'"></i>
-                </h2>
-              </div>
-
+      <div class="flip-box-front">
+        <a href="https://world777.vrnlexch.com/" target="_blank">
+          <img class="lb_partner_logo logo9" src="assets/world7777.webp" alt="world7777"></a>
+        <h4 class="logoname">World777</h4>
+      </div>
+      <div class="card-content">
+        <h2>
+          Username : <span id="vrnldemo1">vrnldemo</span>
+          <i class="fas fa-copy" (click)="copytoclip('vrnldemo9')" [style.display]="copyed === 'vrnldemo9' ? 'none' : 'inline'"></i>
+          <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo9'"></i>
+        </h2>
+        <h2>
+          Password : <span id="password1">Asdf1234</span>
+          <i class="fas fa-copy" (click)="copytoclip('password9')" [style.display]="copyed === 'password9' ? 'none' : 'inline'"></i>
+          <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password9'"></i>
+        </h2>
+      </div>
     </div>
     <div class="card">
-        <div class="flip-box-front">
-            <a href="https://lcexch.vrnlexch.com/" target="_blank">
-                <img class="lb_partner_logo logo10" src="assets/lcexch.webp" alt="lcexch">
-            </a>
-            <h4 class="logoname">Lcexch</h4>
-        </div>
-        <div class="card-content">
-            <h2>
-              Username : <span id="vrnldemo">vrnldemo</span>
-              <i class="fas fa-copy" (click)="copytoclip('vrnldemo')" [style.display]="copyed === 'vrnldemo' ? 'none' : 'inline'"></i>
-              <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo'"></i>
-            </h2>
-            <h2>
-              Password : <span id="password">Asdf1234</span>
-              <i class="fas fa-copy" (click)="copytoclip('password')" [style.display]="copyed === 'password' ? 'none' : 'inline'"></i>
-              <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password'"></i>
-            </h2>
-          </div>
+      <div class="flip-box-front">
+        <a href="https://lcexch.vrnlexch.com/" target="_blank">
+          <img class="lb_partner_logo logo10" src="assets/lcexch.webp" alt="lcexch">
+        </a>
+        <h4 class="logoname">Lcexch</h4>
+      </div>
+      <div class="card-content">
+        <h2>
+          Username : <span id="vrnldemo10">vrnldemo</span>
+          <i class="fas fa-copy" (click)="copytoclip('vrnldemo10')" [style.display]="copyed === 'vrnldemo10' ? 'none' : 'inline'"></i>
+          <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo10'"></i>
+        </h2>
+        <h2>
+          Password : <span id="password10">Asdf1234</span>
+          <i class="fas fa-copy" (click)="copytoclip('password10')" [style.display]="copyed === 'password10' ? 'none' : 'inline'"></i>
+          <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password10'"></i>
+        </h2>
+      </div>
+    </div>
+    
+    
           
           
           
