--- a/src/app/header2/header2.component.css
+++ b/src/app/header2/header2.component.css
@@ -740,6 +740,7 @@ nav{
 
       .navbar-brand{
         width: 77%;
+        margin-left: 12px;
 
       }
     }
@@ -3198,15 +3199,19 @@ color: #808080;
 }
 .navbar-toggler-icon{
   background-image: var(--bs-navbar-toggler-icon-bg) !important;
+  width: 29px;
+  height: 18px
 }
 /* .navbar>.container-fluid{
   display: block;
 } */
 .navbar-toggler{
   float: right;
-  background-color: rgba(122,211,255,0.25);
-  padding: 0.458em 0.625em;
+  /* background-color: rgba(122,211,255,0.25); */
+ 
   box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.25);
+  background-color: rgba(122,211,255,0.25);
+  padding: 4px;
 }
 .navbar>.container, .navbar>.container-fluid, .navbar>.container-lg, .navbar>.container-md, .navbar>.container-sm, .navbar>.container-xl, .navbar>.container-xxl {
   /* display: block !important; */
