--- a/src/app/risk-management/risk-management.component.html
+++ b/src/app/risk-management/risk-management.component.html
@@ -160,7 +160,8 @@
 <div class="vc_empty_space" style="height: 32px"><span class="vc_empty_space_inner"></span></div>
 	<div class="wpb_text_column wpb_content_element ">
 		<div class="wpb_wrapper">
-			<div class="niva-separator" style="height: 4px; background: #a0c528; width: 60px; border-radius: 5px;"></div>
+			<div class="niva-separator" style="height: 4px; background: #a0c528; width: 60px; border-radius: 5px;margin-left: 27px;
+    "></div>
 
 		</div>
 	</div>
