--- a/src/styles.css
+++ b/src/styles.css
@@ -412,9 +412,9 @@ display: none;
     font-size: 18px;
     color: gray;
 }
-.casino_col{
+/* .casino_col{
     width: 18%;
-}
+} */
 .casino_list{
     font-size: 17px;
     color: gray;
