--- a/src/app/betting-trade-master/betting-trade-master.component.html
+++ b/src/app/betting-trade-master/betting-trade-master.component.html
@@ -131,7 +131,7 @@
         <p style="color: #686868;font-size: 16px;font-family: Poppins;
         line-height: 30px;
         font-weight: 400;">
-            Vrnl works to ensure our application complies with all the guidelines published by the different jurisdictions. Sirplay’s Sports Betting System has been tested and certified by leading industry entities. Sirplay’s Sports Betting Software has already achieved 4 certifications of quality and security, and others are in progress.
+            Vrnl works to ensure our application complies with all the guidelines published by the different jurisdictions. Vrnl’s Sports Betting System has been tested and certified by leading industry entities. Vrnl’s Sports Betting Software has already achieved 4 certifications of quality and security, and others are in progress.
         </p>
     </div>
 
