--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -38,7 +38,7 @@
       <div class="platform_col_2">
         <img
           class="platform_img"
-          src="assets/vrnl image 11.webp"
+          src="assets/vrnl_img_up.webp"
         width="544" height="310"
         alt="One Platform, many solutions">
         <div class="platform_you_tube">
