--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -8,7 +8,7 @@
         <p class="para_faq">We have answers (Well, most of the times!)</p>
         <p class="freq_param">
           Below you'll find answer to the most common question please check out
-          our <strong>Facebook Whatsapp Instagram Skype .</strong> if you still
+          our <strong> <a href="https://www.facebook.com/people/Jack-Harris/pfbid02zB4x4iS12KXrQbTqepGxwWwtG1buPgyyzc5Ppiqh3vc2mL9woipxQFsZh319pvjNl/" target="_blank">Facebook</a> <a href="https://api.whatsapp.com/send/?phone=%2B918268808222&text&type=phone_number&app_absent=0" target="_blank"> Whatsapp</a>  <a href="https://www.instagram.com/vrnl_official/?igshid=NzZhOTFlYzFmZQ%3D%3D"> Instagram</a>  <a  href="skype:live:9960f32f776599a2?chat" > Skype</a> .</strong> if you still
           can't find the answer you're looking for, just
           <b routerLink="/contact">Contact us ! </b>
         </p>
