--- a/src/app/sportbet/sportbet.component.css
+++ b/src/app/sportbet/sportbet.component.css
@@ -2756,3 +2756,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     margin-left: 13px;
   }
 }
+.web3_img{
+  width: 569px;
+  height: 373px;
+}
