--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -171,7 +171,7 @@
 
     <div class="sportsbetting-complete-sports-col2">
       <img
-        src="assets/vrnl 22.webp"
+        src="assets\football image 3.png"
         width="353"
         height="650"
         class="web3_img"
