--- a/src/app/sportbet/sportbet.component.css
+++ b/src/app/sportbet/sportbet.component.css
@@ -278,9 +278,9 @@ strong{
 
 }
 
-.sportsbetting-complete-sports-col2 img {
+/* .sportsbetting-complete-sports-col2 img {
   margin-left: 40%;
-}
+} */
 .crz_images{
 height: 93%;
 }
@@ -2757,6 +2757,6 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   }
 }
 .web3_img{
-  width: 569px;
-  height: 373px;
+  width: 629px;
+  height: 455px;
 }
