--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -167,12 +167,14 @@
               class="fa-brands fa-skype"></i></a>
           <a target="_blank" href="https://www.instagram.com/vrnl_official/?igshid=NzZhOTFlYzFmZQ%3D%3D" style="color: black;" aria-label="Visit instagram Profile"> <i
               class="fa-brands fa-instagram"></i></a>
-             
+              <div id="google_translate_element"></div>
 
         </div>
       </div>
+      
     </nav>
   </header>
+
 </div>
 
 <!-- responsive header -->
