--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -145,7 +145,7 @@
           </ul>
           </div>
         </div>
-        <div class="nav_col_3"  id="google_translate_element">
+        <div class="nav_col_3" >
           <a target="_blank" href="https://www.facebook.com/people/Jack-Harris/pfbid02zB4x4iS12KXrQbTqepGxwWwtG1buPgyyzc5Ppiqh3vc2mL9woipxQFsZh319pvjNl/"
           style="color: black;" aria-label="Visit Facebook Profile">
           <i class="fa-brands fa-facebook-f"></i>
@@ -170,6 +170,7 @@
                
 
         </div>
+        <div  id="google_translate_element"></div>
       </div>
       
     </nav>
