--- a/src/styles.css
+++ b/src/styles.css
@@ -13905,3 +13905,13 @@ list-style: none;
 .iti__country,.iti__selected-dial-code,.country {
     font-size: 14px !important;
 }
+
+/* .VIpgJd-ZVi9od-l4eHX-hSRGPd,.VIpgJd-ZVi9od-ORHb-OEVmcd,.VIpgJd-yAWNEb-L7lbkb,.VIpgJd-ZVi9od-aZ2wEe-OiiCO,.VIpgJd-ZVi9od-aZ2wEe,.VIpgJd-ZVi9od-aZ2wEe-OiiCO{
+    display: none !important;
+}
+.goog-te-gadget .goog-te-combo {
+    margin: 1px 0;
+}
+.goog-te-combo{
+    width: 139px;
+} */
