--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -76,7 +76,7 @@
               <div class="sub_menu">
                 <ul>
                   <li>
-                    <a routerLink="/risk-management">risk management</a>
+                    <a routerLink="/risk-management">Risk management</a>
                   </li>
                   <li>
                     <a routerLink="/betting-trade-master">Betting Trade Master</a>
