--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -170,7 +170,7 @@
                
 
         </div>
-        <div  id="google_translate_element"></div>
+        <!-- <div  id="google_translate_element"></div> -->
       </div>
       
     </nav>
