--- a/src/app/risk-management/risk-management.component.html
+++ b/src/app/risk-management/risk-management.component.html
@@ -182,7 +182,7 @@
 
         <br />
         <br />
-        <div class="white_back"></div>
+        <div class="white_backRM"></div>
       </div>
       <div class="integration_col_1">
 <img class="virtual_img ai-img8" src="assets/ai-technical-requirements-scaled.webp" alt="virtual games">
@@ -214,7 +214,7 @@
 
         <br />
         <br />
-        <div class="white_back"></div>
+        <div class="white_backCS"></div>
       </div>
     </div>
   </section> 
@@ -237,7 +237,7 @@
           </button>
         <br />
         <br />
-        <div class="white_back"></div>
+        <div class="white_backP"></div>
       </div>
       <div class="integration_col_1">
 <img class="virtual_img ai-img5" src="assets/ai-safebet_lion_little.webp" alt="virtual games">
